# giga-mlab-school-connectivity-cop

./: README.md  pyproject.toml  research agenda v1  research_agenda.md
materials/: qoe-measurements-design.md
materials/2026-05-EduPlatformsDatabase/: README.md  edtech_national_platforms.csv  edtech_national_platforms_measurable.csv  edtech_national_platforms_tiered.csv
materials/2026-05-IQB-Edu/: IQB_Edu_Policy_Linkage.ipynb  README.md
materials/2026-05-IQB-Edu/notebooks/: IQB-Edu_Moldova_schools.ipynb  IQB_Edu_Policy_Linkage.ipynb  README.md  pyproject.toml
materials/2026-05-IQB-Edu/notebooks/data/: IQB_Edu_MD_2026-01-01_2026-02-01_stats.csv  M-Lab_MD_2026-01-01_2026-02-01_country_stats.csv  README.md  giga_MD_schools_metadata.csv
materials/2026-05-IQB-Edu/notebooks/iqbedu/: data.py
