[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["iqbedu"]

[project]
name = "iqb-edu-cop"
version = "0.0.1"
description = "Per-school IQB analysis for Giga Meter deployments - Connectivity Community of Practice"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}

dependencies = [
    "jupyter>=1.0.0",
    "matplotlib>=3.10.8",
    "mlab-iqb @ git+https://github.com/m-lab/iqb.git#subdirectory=library",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=6.7.0",
]
